Thu Apr 19 19:52:46 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed the configuration data fetching when accepting new
	  connections in the server.  Affected file silcd/server.c.

Thu Apr 19 11:40:20 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added `sender_entry' argument to the function
	  silc_server_packet_relay_to_channel so that we can check
	  whether some destination actually belongs to the same route
	  the sender belongs (ie, we must not resend the packet to the
	  sender).  Affected file silcd/packet_send.[ch].

	* Added `servername' field to the SilcClientEntry in the server
	  to hold the name of the server where client is from.  Affected
	  file is silcd/idlist.h.

Wed Apr 18 22:19:03 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Moved the channel message encrypting in the router betwen
	  router connections from silc_server_channel_message to the
	  silc_server_packet_relay_to_channel since we want to check
	  whether we have anybody channel before encrypting anything.
	  Affected files silcd/packet_[receive/send].c.

Tue Apr 17 21:18:19 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed the [AdminConnection] server config section to support
	  multiple entries.  Affected file silcd/serverconfig.c.

	* Added support into the server to check the validity of the
	  incoming connection before executing any KE or authentication
	  protocols.

	* The connection configuration is now saved to the KE and 
	  connection auth protocol contexts and not fetched anymore in 
	  the protocol.  Affected files silcd/server.c, silcd/protocol.[ch].

	* The local hosts listenning address and port is also resolved
	  now when starting the server.  We want to have the socket object
	  to include the real address and port for the listener.  Added
	  new function silc_net_check_local_by_sock into the files
	  lib/silcutil/silcnet.[ch].

	* Fixed a broadcast bug in server -> do not broadcast if we
	  are standalone.
