@@ -1,3 +1,8 @@
+Fri Apr 20 14:00:11 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>
+
+	* Fixed the version checking in the server.  Affected file is
+	  silcd/protocol.c.
+
 Thu Apr 19 19:52:46 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>
 
 	* Fixed the configuration data fetching when accepting new
